--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+
 }
 
 android {
@@ -39,9 +41,13 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.fragment:fragment-ktx:1.3.2'
 
     // RxJava: Library for composing asynchronous and event-based programs by using observable sequences
+    def rxjava_version = '2.1.1'
     implementation "io.reactivex.rxjava2:rxjava:2.2.10"
+    def rxandroid_version = '2.1.1'
+    implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
 
     // Retrofit: A type-safe HTTP client for Android and Java
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
@@ -52,6 +58,17 @@ dependencies {
     // OkHttp: Reliable Http client
     implementation "com.squareup.okhttp3:logging-interceptor:4.7.2"
     implementation "com.squareup.okhttp3:okhttp:4.9.0"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    // Dagger and Hilt: Library for managing dependency injection
+    implementation "com.google.dagger:dagger:2.31"
+    kapt 'com.google.dagger:dagger-compiler:2.28.1'
+
+
+    // Koin for Android - Scope feature
+    // include koin-android-scope & koin-android
+    implementation "org.koin:koin-android:$koin_version"
+    implementation "org.koin:koin-android-viewmodel:$koin_version"
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
